--- a/StudentPortal-main/pom.xml
+++ b/StudentPortal-main/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>javax.persistence-api</artifactId>
+			<version>2.2</version> <!-- Or the version compatible with your JPA implementation -->
+		</dependency>
 	</dependencies>
 
 	<build>
