--- a/StudentPortal-main/src/main/resources/application.properties
+++ b/StudentPortal-main/src/main/resources/application.properties
@@ -4,9 +4,12 @@ server.port = 8080
 spring.application.name=StudentPortal
 
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:dcbapp
+spring.h2.console.path=/h2-console
+
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
